--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,63 @@
 body {
   font-family: sans-serif;
 }
+input {
+  border-radius: 10px;
+  border: none;
+  padding: 6px 16px;
+  outline: none;
+}
+
+button {
+  border-radius: 10px;
+  border: none;
+  padding: 6px 16px;
+}
+
+button:hover {
+  background-color: pink;
+  color: white;
+  cursor: pointer;
+}
+li {
+  margin-right: 10px;
+}
+
+.title {
+  text-align: center;
+  margin-top: 0;
+  font-weight: bold;
+  color: #666;
+}
+.list-row {
+  display: flex;
+  align-items: center;
+  padding-bottom: 5px;
+}
+
+.input-area {
+  background-color: aquamarine;
+  width: 400px;
+  height: 30px;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 10px;
+}
+
+.incomplete-area {
+  background-color: aqua;
+  width: 400px;
+  min-height: 200px;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 10px;
+}
+
+.complete-area {
+  background-color: burlywood;
+  width: 400px;
+  min-height: 200px;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 10px;
+}
